--- a/templates/pokemon.html
+++ b/templates/pokemon.html
@@ -15,22 +15,22 @@
     {% if pokedex %}
         <h1>Your Pokemon is: {{ pokedex.name.capitalize }}</h1>
         <img src="{{ pokedex.sprite }}" alt="pokemon_image" width="300" height="300">
-        <div class="wrapper">
-            <div class="div1">
-                <h1>Abilities:</h1>
+        <div>
+            <div>
+                <h1><u>Abilities:</u></h1>
             </div>
-            <div class="div2">
+            <div>
                 {% for ability in abilities %}
                     <h2> {{ ability }}<br></h2>
                 {% endfor %}
                 <br>
             </div>
         </div>
-        <div class="wrapper">
-            <div class="div1">
-                <h1>Stats:<br></h1>
+        <div>
+            <div>
+                <h1><u>Stats:</u></h1>
             </div>
-            <div class="div2">
+            <div>
                 {% for stat in stats %}
                     <h2> {{ stat }}<br></h2>
                 {% endfor %}
