--- a/templates/pokemon.html
+++ b/templates/pokemon.html
@@ -11,7 +11,6 @@
     <div>
     <h1>Pokemon</h1>
 
-
     {% if pokedex %}
         <h1>Your Pokemon is: {{ pokedex.name.capitalize }}</h1>
         <img src="{{ pokedex.sprite }}" alt="pokemon_image" width="300" height="300">
@@ -26,7 +25,7 @@
                 <br>
             </div>
         </div>
-        <div>
+        <div class="wrapper">
             <div>
                 <h1><u>Stats:</u></h1>
             </div>
@@ -40,5 +39,6 @@
         <h1>{{ not_valid }}</h1>
     {% endif %}
     </div>
+
 </body>
 </html>
